style/fix: white text color for contrast

--- a/src/components/PokiCard/PokiCard.scss
+++ b/src/components/PokiCard/PokiCard.scss
@@ -38,5 +38,6 @@
   }
   span {
     font-size: 0.5em;
+    color: white;
   }
 }
